# the_act_bot

./: .gitignore  README.md  alembic.ini  pyproject.toml
the_act_bot/: main.py
the_act_bot/migrations/: env.py
the_act_bot/migrations/versions/: 07a2674c3356_file_unique_id.py  28dbb8a43906_cascade_2.py  2bc3c93f7ba8_category.py  2d25522f5aa1_unique_const.py  2dcf3bf5f951_cascade_2.py  451206700831_s.py  477b73621ee8_postiiton_to_brand.py  5b990251a940_s.py  60dcf29ca28c_cascade.py  6dcb2ec8c5b7_init.py  758b462474b6_cascade_2.py  7b64a2d2c0b4_phone_nullable.py  85089210912d_add_qty_to_cartitem.py  8b13c4d8a6f6_img.py  b12606106f48_cascade_2.py  b1c2288f8610_cascade_2.py  c2521c67d0e1_cascade_2.py  e288371d93fc_cascade_2.py  e80e5e3091a5_name_nullable.py  ee9675073a5b_cascade_2.py  fdf46e385164_secondaty.py
the_act_bot/src/core/: .env  config.py
the_act_bot/src/database/: enums.py  models.py  session.py
the_act_bot/src/database/models/: __init__.py  base.py  brand.py  cart.py  category.py  discount.py  image.py  order.py  payment.py  product.py  user.py
the_act_bot/src/handlers/: __init__.py  brand_add.py  brand_list.py  brand_remove.py  start.py
the_act_bot/src/handlers/brand/: __init__.py  brand_add.py  brand_edit.py  brand_list.py  brand_remove.py
the_act_bot/src/repos/: base.py  brand.py  cart.py  category.py  image.py  product.py  user.py
the_act_bot/src/schemas/: __init__.py  brand.py  cart.py  category.py  image.py  product.py  user.py
the_act_bot/src/utils/: cart.py  commands.py  keyboards.py  translation.py
(+13 files in other folders)
