[tool.poetry]
name = "the-act-bot"
version = "0.1.0"
description = ""
authors = ["mdergachyov <m.dergachyov@bringo.uz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^21.2"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
